--- a/499Pinout.ioc
+++ b/499Pinout.ioc
@@ -19,40 +19,41 @@ Mcu.Name=STM32F410R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PH0 - OSC_IN
-Mcu.Pin10=PA7
-Mcu.Pin11=PC4
-Mcu.Pin12=PC5
-Mcu.Pin13=PB0
-Mcu.Pin14=PB1
-Mcu.Pin15=PB2
-Mcu.Pin16=PB13
-Mcu.Pin17=PB14
-Mcu.Pin18=PB15
-Mcu.Pin19=PC7
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PC4
+Mcu.Pin13=PC5
+Mcu.Pin14=PB0
+Mcu.Pin15=PB1
+Mcu.Pin16=PB2
+Mcu.Pin17=PB13
+Mcu.Pin18=PB14
+Mcu.Pin19=PB15
 Mcu.Pin2=PH1 - OSC_OUT
-Mcu.Pin20=PC8
-Mcu.Pin21=PC9
-Mcu.Pin22=PA8
-Mcu.Pin23=PA10
-Mcu.Pin24=PA11
-Mcu.Pin25=PA13
-Mcu.Pin26=PA14
-Mcu.Pin27=PA15
-Mcu.Pin28=PC12
-Mcu.Pin29=PB3
+Mcu.Pin20=PC7
+Mcu.Pin21=PC8
+Mcu.Pin22=PC9
+Mcu.Pin23=PA8
+Mcu.Pin24=PA10
+Mcu.Pin25=PA11
+Mcu.Pin26=PA13
+Mcu.Pin27=PA14
+Mcu.Pin28=PA15
+Mcu.Pin29=PC12
 Mcu.Pin3=PC1
-Mcu.Pin30=PB6
-Mcu.Pin31=PB7
-Mcu.Pin32=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
-Mcu.Pin33=VP_SYS_VS_tim6
-Mcu.Pin34=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin30=PB3
+Mcu.Pin31=PB6
+Mcu.Pin32=PB7
+Mcu.Pin33=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
+Mcu.Pin34=VP_SYS_VS_tim6
+Mcu.Pin35=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin4=PA0-WKUP
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA4
-Mcu.Pin8=PA5
-Mcu.Pin9=PA6
-Mcu.PinsNb=35
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA4
+Mcu.Pin9=PA5
+Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F410R8Tx
@@ -68,6 +69,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
+NVIC.TIM5_IRQn=true\:15\:0\:true\:false\:true\:true\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
@@ -75,6 +77,7 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=BUCK_PWM
 PA0-WKUP.Signal=S_TIM5_CH1
+PA1.Signal=S_TIM5_CH2
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=SEL_0
 PA10.Locked=true
@@ -256,6 +259,8 @@ SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM5_CH1.0=TIM5_CH1,PWM Generation1 CH1
 SH.S_TIM5_CH1.ConfNb=1
+SH.S_TIM5_CH2.0=TIM5_CH2,Output Compare2 CH2
+SH.S_TIM5_CH2.ConfNb=1
 SH.S_TIM9_CH1.0=TIM9_CH1,PWM Generation1 CH1
 SH.S_TIM9_CH1.ConfNb=1
 SPI1.CalculateBaudRate=8.0 MBits/s
@@ -267,8 +272,12 @@ TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.IPParameters=Channel-PWM Generation1 CH1
 TIM11.Channel=TIM_CHANNEL_1
 TIM11.IPParameters=Channel
+TIM5.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM5.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
 TIM5.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM5.IPParameters=Channel-PWM Generation1 CH1
+TIM5.IPParameters=Channel-PWM Generation1 CH1,Channel-Output Compare2 CH2,Period,Prescaler,AutoReloadPreload
+TIM5.Period=7200
+TIM5.Prescaler=1000
 TIM9.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM9.IPParameters=Channel-PWM Generation1 CH1
 VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Mode=Counts__internal_clock_event_00
