Routines for hotplate

--- a/499Pinout.ioc
+++ b/499Pinout.ioc
@@ -61,6 +61,7 @@ MxCube.Version=6.5.0
 MxDb.Version=DB.6.0.50
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
@@ -69,7 +70,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
-NVIC.TIM5_IRQn=true\:15\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM5_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
@@ -127,13 +128,15 @@ PB1.Signal=GPXTI1
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=DEB_B
 PB13.Locked=true
-PB13.Signal=GPXTI13
-PB14.GPIOParameters=GPIO_Label
+PB13.Signal=GPIO_Input
+PB14.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PB14.GPIO_Label=DEB_A
+PB14.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB14.Locked=true
 PB14.Signal=GPXTI14
-PB15.GPIOParameters=GPIO_Label
+PB15.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PB15.GPIO_Label=ROT_SW
+PB15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB15.Locked=true
 PB15.Signal=GPXTI15
 PB2.GPIOParameters=GPIO_Label
@@ -225,7 +228,7 @@ RCC.FCLKCortexFreq_Value=16000000
 RCC.FMPI2C1Freq_Value=16000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=16000000
-RCC.HSE_VALUE=25000000
+RCC.HSE_VALUE=26000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=96000000
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,VCOInputFreq_Value,VCOOutputFreq_Value,VCOQOutputFreq_Value,VCOROutputFreq_Value
@@ -235,7 +238,7 @@ RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=16000000
 RCC.PLLCLKFreq_Value=96000000
 RCC.RTCFreq_Value=32000
-RCC.RTCHSEDivFreq_Value=12500000
+RCC.RTCHSEDivFreq_Value=13000000
 RCC.SYSCLKFreq_VALUE=16000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
@@ -245,8 +248,6 @@ SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
-SH.GPXTI13.0=GPIO_EXTI13
-SH.GPXTI13.ConfNb=1
 SH.GPXTI14.0=GPIO_EXTI14
 SH.GPXTI14.ConfNb=1
 SH.GPXTI15.0=GPIO_EXTI15
